Code quality improve

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
     "eslint": "8.22.0",
-    "eslint-config-next": "13.5.2",
-    "next": "13.5.2",
+    "eslint-config-next": "14.1.0",
+    "next": "14.1.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +25,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-query-devtools": "^5.24.0"
   }
 }
