--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@strapi/blocks-react-renderer": "^1.0.0",
     "@tanstack/react-query": "^4.35.3",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
@@ -18,14 +19,17 @@
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
     "postcss": "8.4.30",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
+    "thumbhash": "^0.1.1",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query-devtools": "^5.24.0"
+    "@tanstack/react-query-devtools": "^5.24.0",
+    "@types/qs": "6.9.11"
   }
 }
