--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
     "postcss": "8.4.30",
+    "preact": "^10.19.6",
+    "preact-compat": "^3.19.0",
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
