--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@strapi/blocks-react-renderer": "^1.0.0",
-    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query": "^5.32.0",
+    "@tanstack/react-query-persist-client": "^5.37.1",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -19,11 +20,14 @@
     "eslint": "8.22.0",
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
+    "next-optimistic-link": "^0.0.7-rc.1",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "thumbhash": "^0.1.1",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
